vzctl restart: make it understand all 'start' and 'stop' options
(1) Functions parse_start_opt() and parse_stop_opt() were combined
    into single parse_startstop_opt() which is also used for "restart".
(2) vps_restart function removed
(3) restart() now uses start() and stop() so (almost) no logic duplication
(4) "vzctl restart" now accepts and honors all the start and stop options.
(5) Document that fact in man/vzctl.8
(6) Modify bash completion script to provide possible completions for
    start, stop, and restart options (previously only stop --fast was
    working).

http://bugzilla.openvz.org/653

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -62,6 +62,9 @@ _vzctl()
 		--diskspace --diskinodes --quotatime --quotaugidlimit \
 		--noatime --capability --devnodes --devices --applyconfig \
 		--name --ioprio --setmode --meminfo"
+	vzctl_start_opts="--wait --force"
+	vzctl_stop_opts="--fast"
+	vzctl_restart_opts="$vzctl_start_opts $vzctl_stop_opts"
 
 	iptables_names="iptable_filter iptable_mangle ipt_limit
 		ipt_multiport ipt_tos ipt_TOS ipt_REJECT ipt_TCPMSS
@@ -226,8 +229,14 @@ _vzctl()
 					chkpnt|restore)
 						COMPREPLY=( $( compgen -W "--dumpfile" -- $cur ) )
 						;;
+					start)
+						COMPREPLY=( $( compgen -W "$vzctl_start_opts" -- $cur ) )
+						;;
 					stop)
-						COMPREPLY=( $( compgen -W "--fast" -- $cur ) )
+						COMPREPLY=( $( compgen -W "$vzctl_stop_opts" -- $cur ) )
+						;;
+					restart)
+						COMPREPLY=( $( compgen -W "$vzctl_restart_opts" -- $cur ) )
 						;;
 					*)
 						;;
