scripts/vps-functions: make vzwarning only use $1
All the other arguments are ignored.

I have checked all the places where vzwarning is used, they all
quote the arguments so no additional modifications are needed
to accomodate the change.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -56,12 +56,12 @@ vzerror()
 
 # Prints warning message
 # Parameters:
-#   $* - error message
+#   $1 - a message
 # Example of usage:
-#   vzwarning Invalid user
+#   vzwarning 'Invalid user'
 vzwarning()
 {
-	echo "$SELFNAME WARNING: $*" 1>&2
+	echo "$SELFNAME WARNING: $1" 1>&2
 }
 
 # Prints debug message
