/etc/init.d/vz*: use vzlist to get list of CT to start
Previous commit 87627359219bed38ab8f1aa96063f7895dadbaf7
introduced 'onboot' field to vzlist. Now let's use it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -160,12 +160,8 @@ start_ve() {
 	local veid velist msg need_restart=""
 
 	# get all containers we should start on boot
-	if ! cd ${VPSCONFDIR}; then
-		eerror $? "Unable to cd to ${VPSCONFDIR}"
-		return 1
-	fi
-	velist=$(grep -l '^ONBOOT=yes\|^ONBOOT=\"yes\"' [0-9]*.conf 2>/dev/null | sed -e 's/.conf//g' | sort -n)
-	cd - >/dev/null
+	velist=$(vzlist -aH -octid,onboot |
+		awk '$2 == "yes" {print $1}')
 
 	/sbin/sysctl -q -w net.ipv4.route.src_check=0
 
