etc/init.d/vz*: start CTs according to bootorder
This is a third patch in a set to fix OpenVZ bug #1300.

When we have vzlist with an ability to sort by bootorder
(commit 20540fabf694eac5d748e7e0f21c0c1fd5a4ec16)
it's really easy to implement.

http://bugzilla.openvz.org/1300

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -160,7 +160,7 @@ start_ve() {
 	local veid velist msg need_restart=""
 
 	# get all containers we should start on boot
-	velist=$(vzlist -aH -octid,onboot |
+	velist=$(vzlist -aH -octid,onboot -s-bootorder |
 		awk '$2 == "yes" {print $1}')
 
 	/sbin/sysctl -q -w net.ipv4.route.src_check=0
