bash-completion script: add --swappages and --cpus set options
Apparently they were forgotten.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -57,7 +57,8 @@ _vzctl()
 		--kmemsize --tcpsndbuf --tcprcvbuf --othersockbuf \
 		--dgramrcvbuf --oomguarpages --lockedpages --privvmpages \
 		--shmpages --numfile --numflock --numpty --numsiginfo \
-		--dcachesize --numiptent --physpages --cpuunits --cpulimit \
+		--dcachesize --numiptent --physpages --swappages \
+		--cpuunits --cpulimit --cpus \
 		--iptables --netdev_add --netdev_del --netif_add --netif_del \
 		--diskspace --diskinodes --quotatime --quotaugidlimit \
 		--noatime --capability --devnodes --devices --applyconfig \
