--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -151,6 +151,7 @@ logexec () {
 }
 
 undo_conf () {
+	$SSH "root@$host" "vzctl set $VEID --name '' --save > /dev/null"
 	$SSH "root@$host" "rm -f $vpsconf"
 }
 
