--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -439,9 +439,7 @@ else
 fi
 
 log 1 "Syncing private"
-if ! $RSYNC --progress \
-		"$VE_PRIVATE" "root@$host:${VE_PRIVATE%/*}" |
-		grep "% of" | awk -v ORS="\r" '{print $10}'; then
+if ! $RSYNC "$VE_PRIVATE" "root@$host:${VE_PRIVATE%/*}"; then
 	log 0 "Failed to sync container private areas"
 	undo_quota_on
 	exit $MIG_ERR_COPY
