man/Makefile.am: add target for checking/fixing man page dates
The idea is simple: get the last git commit date for the man page
file and put it into that file, then use git diff to see if there
are any changes.

Note though that this script can not be used to fix those dates,
otherwise last git commit date will become today. So this is only
for checking, not for fixing.

Interestingly enough, only one date was fixed when I run this test,
and this only happened because one commit was committed later than
created.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -30,3 +30,12 @@ man_MANS = arpsend.8 \
            vzifup-post.8
 
 EXTRA_DIST = $(man_MANS)
+
+check-man-dates:
+	for FILE in $(man_MANS); do \
+		DATE="$$(LANG=C git log -1 --format='format:%cD' \
+			$${FILE} | awk '{print $$2, $$3, $$4}')" && \
+		echo $$FILE: $$DATE && \
+		sed -e "1s%\(\.TH \w\w* [0-9] \"\)[0-9]* \w\w* [0-9][0-9][0-9][0-9]%\1$${DATE}%" -i $${FILE}; \
+	done
+	git diff $(man_MANS)
