--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -19,8 +19,8 @@
 # vzmigrate is used for container migration to another node
 #
 # Usage:
-# vzmigrate [-r yes|no] [--ssh=<options>] [--keep-dst] [--online] [-v]
-#           destination_address CTID
+# vzmigrate [-r yes|no] [--ssh=<options>] [--rsync=<options>]
+#           [--keep-dst] [--online] [-v] destination_address CTID
 # Options:
 #	-r, --remove-area yes|no
 #		Whether to remove container private area on the source
@@ -29,6 +29,8 @@
 #		Additional options that will be passed to ssh while establishing
 #		connection to destination HN. Please be careful with options
 #		passed, DO NOT pass destination hostname.
+#	--rsync=<rsync options>
+#		Additional options that will be passed to rsync.
 #	--keep-dst
 #		Do not clean synced destination container private area
 #		in case of some	error. It makes sense to use this option
@@ -59,7 +61,6 @@ ACT_SCRIPTS_SFX="start stop mount umount"
 SSH_OPTIONS="-c blowfish"
 SCP_OPTIONS=$SSH_OPTIONS
 RSYNC_OPTIONS="-aH --delete --numeric-ids"
-RSYNC="rsync $RSYNC_OPTIONS"
 
 online=0
 verbose=0
@@ -101,6 +102,8 @@ Options:
 	Additional options that will be passed to ssh while establishing
 	connection to destination host. Please be careful with options
 	passed, DO NOT pass destination hostname.
+--rsync=<rsync options>
+	Additional options that will be passed to rsync.
 --keep-dst
 	Do not clean synced destination container private area in case of some
 	error. It makes sense to use this option on big container migration to
@@ -278,6 +281,9 @@ while [ ! -z "$1" ]; do
 		SSH_OPTIONS="$SSH_OPTIONS $(echo $1 | cut -c7-)"
 		SCP_OPTIONS="`echo $SSH_OPTIONS | sed 's/-p/-P/1'`"
 		;;
+	--rsync=*)
+		RSYNC_OPTIONS="$RSYNC_OPTIONS $(echo $1 | cut -c9-)"
+		;;
 	*)
 		break
 		;;
@@ -285,6 +291,7 @@ while [ ! -z "$1" ]; do
 	shift
 done
 
+RSYNC="rsync $RSYNC_OPTIONS"
 SSH="ssh $SSH_OPTIONS"
 SCP="scp $SCP_OPTIONS"
 export RSYNC_RSH="$SSH"
