vzifup-post: minor cleanups
(1) remove duplicate check for /proc/vz/veinfo

(2) move check for $1 up so in case argument is not supplied
    we exit before trying to source vps-functions and vz.conf

(3) Fix own name in usage() output -- just use $(basename $0)

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzifup-post.in
+++ b/bin/vzifup-post.in
@@ -5,6 +5,16 @@
 
 [ ! -f /proc/vz/veinfo ] && exit 0
 
+usage()
+{
+	echo "Usage: $(basename $0) DEVICE" 1>&2
+	exit 1
+}
+
+# Supplied interface name
+DEV=$1
+[ -z "${DEV}" ] && usage
+
 test -f @PKGLIBDIR@/scripts/vps-functions || exit 1
 test -f @PKGCONFDIR@/vz.conf || exit 1
 . @PKGLIBDIR@/scripts/vps-functions
@@ -17,18 +27,6 @@ update_arp()
 		vzarp add ${veip}
 	done
 }
-
-usage()
-{
-	echo "Usage: vzarp-ifup DEVICE" 1>&2
-	exit 1
-}
-
-[ ! -f /proc/vz/veinfo ] && exit 0
-
-# Supplied interface name
-DEV=$1
-[ -z "${DEV}" ] && usage
 
 # Get possible interface names
 vzgetnetdev
