vzgetnetdev(): check for whole words
We look for the interfaces which are UP but not LOOPBACK, SLAVE or NOARP.

Just to be on the safe side, look for the whole words, so we will
not mistake some future flag named SUPER for UP.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -100,7 +100,8 @@ vzgetnetdev()
 	/^[0-9]+/ {
 		dev="";
 	}
-	/^[0-9]+/ && /UP/ && !/LOOPBACK/ && !/SLAVE/ && !/NOARP/ {
+	/^[0-9]+/ && /\<UP\>/ && !/\<LOOPBACK\>/ \
+			&& !/\<SLAVE\>/ && !/\<NOARP\>/ {
 		dev=$2;
 	}
 	/^[\ \t]+inet6? / {
