vzgetnetdev(): stricter regexes when looking for device numbers
We are parsing "ip address list" output for lines with interfaces,
they begin with one or more digits and this is catched by the current regex.
But then after the digit(s) comes a colon and a space, so let's include
these two characters to the regex as well to make it stricter.

Again as previous patch this is not a bugfix but just an enhancement.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -97,10 +97,10 @@ vzgetnetdev()
 	# Get a list of interfaces, excluding ones with LOOPBACK,
 	# NOARP, or SLAVE flags
 	NETDEVICES=`${IP_CMD} addr list | awk '
-	/^[0-9]+/ {
+	/^[0-9]+: / {
 		dev="";
 	}
-	/^[0-9]+/ && /\<UP\>/ && !/\<LOOPBACK\>/ \
+	/^[0-9]+: / && /\<UP\>/ && !/\<LOOPBACK\>/ \
 			&& !/\<SLAVE\>/ && !/\<NOARP\>/ {
 		dev=$2;
 	}
