vzgetnetdev(): introduce interface name blacklist, add veth
We are pretty sure we do not need to send our ARP packets to
veth interfaces.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -102,7 +102,8 @@ vzgetnetdev()
 	}
 	/^[0-9]+: / && /\<UP\>/ && !/\<LOOPBACK\>/ \
 			&& !/\<SLAVE\>/ && !/\<NOARP\>/ {
-		dev=$2;
+		if ($2 !~ /^veth[0-9]+/)
+			dev=$2;
 	}
 	/^[\ \t]+inet6? / {
 		if (dev != "") print (dev);
