install-redhat: fix case when ifup-local is already set up
This is all messy because there is no something like Debian's
/etc/network/if-up.d/ in Red Hat, there is only one script
(/sbin/ifup-local). Therefere we need to check all the
possible cases here:

 (1) In case there is no /sbin/ifup-local, add it as a symlink
     to our script vzifup-post.

 (2) In case /sbin/ifup-local exist, warn user that he needs to
     add a call to vzifup-post to it.

 (3) In case there is /sbin/ifup-post and it is a symlink to our
     script already, do nothing.

So, (1) and (2) were implemented already, this patch adds (3) to
both places we do tricks, i.e. a Makefile and vzctl.spec.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -36,6 +36,9 @@ install-redhat:
 		$(MKDIR_P) "$(DESTDIR)/sbin"; \
 		$(LN_S) "..$(sbindir)/vzifup-post" \
 			"$(DESTDIR)/sbin/ifup-local"; \
+	elif readlink "$(DESTDIR)/sbin/ifup-local" | \
+			fgrep -q vzifup-post; then \
+		true; \
 	else \
 		echo; \
 		echo " ***************************************************"; \
