bash_completion: do not spit error if there are no OS templates
If there are no OS templates installed, pressing TAB after
the --ostemplate option emits an ugly error:

	ls: /vz/template/cache/*.tar.gz: No such file or directory

Hide it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -117,7 +117,7 @@ _vzctl()
 			--ostemplate)
 				# get the template path from the vz.conf
 				local vztmpl=`grep ^TEMPLATE @PKGCONFDIR@/vz.conf | cut -d "=" -f 2`
-				COMPREPLY=( $( compgen -W "$(command ls -1 $vztmpl/cache/*.tar.gz |
+				COMPREPLY=( $( compgen -W "$(command ls -1 $vztmpl/cache/*.tar.gz 2>/dev/null |
 						    sed -e "s#^$vztmpl/cache/##" -e 's#.tar.gz$##')" -- $cur ) )
 
 				;;
