man: vps.conf(5) renamed to ctid.conf(5)
The term VPS is way obsolete.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -16,7 +16,7 @@
 #
 
 man_MANS = arpsend.8 \
-           vps.conf.5 \
+           ctid.conf.5 \
            vzcalc.8 \
            vzcfgvalidate.8 \
            vz.conf.5 \
