Fixed ifup error on Debian
When running /sbin/ifup vmbr1, the following error appears:
 Usage: vzarp-ifup DEVICE
 run-parts: /etc/network/if-up.d/vzifup-post exited with return code 1

According to Debian's interfaces(5), the interface name is passed to
post-up scripts via the $IFACE environment variable, not via a
command-line argument as in SuSE.

--- a/configure.ac
+++ b/configure.ac
@@ -150,6 +150,7 @@ AC_CONFIG_FILES([bin/Makefile
                  etc/dists/Makefile
                  etc/init.d/Makefile
                  etc/logrotate.d/Makefile
+                 etc/network/if-up.d/Makefile
                  etc/network-scripts/Makefile
                  etc/udev/Makefile
                  etc/Makefile
