vzmigrate: do not try to turn quota off if DISK_QUOTA=off
The bug prevents migrating stopped CT when DISK_QUOTA=off.
We check DISK_QUOTA in other places but forgot it here.

Initially reported by Valerij Frolov.
Initial fix by Marat Stanichenko.

http://bugzilla.openvz.org/1094

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -591,7 +591,7 @@ else
 			undo_copy_quota
 			exit $MIG_ERR_MOUNT_VPS
 		fi
-	else
+	elif [ "${DISK_QUOTA}" != "no" ]; then
 		log 1 "Turning quota off"
 		if ! logexec 2 $SSH root@$host vzquota off $VEID ; then
 			log 0 "failed to turn quota off"
