--- a/pathsubst.am
+++ b/pathsubst.am
@@ -1,4 +1,4 @@
-#  Copyright (C) 2006-2008, Parallels, Inc. All rights reserved.
+#  Copyright (C) 2006-2010, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -30,4 +30,4 @@ pathsubst_RULES = \
 pathsubst = sed -e '$(pathsubst_RULES)'
 
 %: %.in
-	$(pathsubst) $< > $@
+	$(AM_V_GEN)$(pathsubst) $< > $@
