vzmigrate: Get rid of 'echo -e' bashism
Apparently using 'echo -e' is non-portable. Replace to printf
which is supposed to be portable and understand escape sequences
(as recommended by https://wiki.ubuntu.com/DashAsBinSh).

http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=581147

Reported-by: Raphael Geissert <atomo64@gmail.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -128,13 +128,13 @@ EOF
 log () {
 	if [ $1 -eq 0 ]; then
 		shift
-		echo -e "Error: " $@ >&2
+		printf "Error: " $@ >&2
 	elif [ $1 -eq 1 ]; then
 		shift
-		echo -e $@
+		printf $@
 	elif [ $verbose -eq 1 ]; then
 		shift
-		echo -e "   " $@
+		printf "   " $@
 	fi
 }
 
