vzmigrate: saner output for non-existing CTID
Commit 484afba08 added support for CT names. It works, but
one corner case is not working particularly well. When non-existing
numeric CT ID is supplied, vzlist prints "Container(s) not found"
error which is a bit misleading. (If non-numeric non-existing ID
is supplied to vzlist the error is "CT ID 12434a is invalid"
which is fine in the context of running vzmigrate.)

To fix this problem, dd a check if supplied CTID is a number,
and in case it is, do not try to call vzlist for resolving.

  # vzmigrate otherhost 123
Before:
  Container(s) not found
Now:
  CT #123 doesn't exist

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -305,10 +305,12 @@ if [ -z "$host" -o -z "$VEID" -o $# -ne 0 ]; then
 fi
 
 # Support CT names as well
-VEID=$(vzlist -o ctid -H $VEID | tr -d ' ')
-if [ -z "$VEID" ]; then
-	# Error message is printed by vzlist to stderr
-	exit $MIG_ERR_NOEXIST
+if echo $VEID | egrep -qv '^[[:digit:]]+$'; then
+	VEID=$(vzlist -o ctid -H $VEID | tr -d ' ')
+	if [ -z "$VEID" ]; then
+		# Error message is printed by vzlist to stderr
+		exit $MIG_ERR_NOEXIST
+	fi
 fi
 
 vpsconf="$confdir/$VEID.conf"
