vzmigrate: migrate premount/postumount action scripts
Commit eeceb721472483f6e8d90cbfe72967c3336b5e77 added
support for premount/postumount action scripts. vzmigrate
should know about these scripts in order to migrate them.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -19,7 +19,7 @@
 # vzmigrate is used for container migration to another node
 
 
-ACT_SCRIPTS_SFX="start stop mount umount"
+ACT_SCRIPTS_SFX="start stop mount umount premount postumount"
 # blowfish is a fast block cipher, much faster then 3des
 SSH_OPTIONS="-c blowfish"
 SCP_OPTIONS=$SSH_OPTIONS
