--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -56,7 +56,7 @@
 #	entering a password.
 
 
-ACT_SCRIPTS_SFX="start stop mount umount"
+ACT_SCRIPTS_SFX="start stop mount umount premount postumount"
 # blowfish is a fast block cipher, much faster then 3des
 SSH_OPTIONS="-c blowfish"
 SCP_OPTIONS=$SSH_OPTIONS
